Avoid code block overflowing the page

--- a/docs/src/style/base.scss
+++ b/docs/src/style/base.scss
@@ -85,6 +85,7 @@ pre {
   padding: spacing();
   background-color: color(gray, light);
   border-radius: spacing(1);
+  overflow-x: scroll;
 }
 
 code {
